# void-linux-installer

./: .gitignore  Cargo.toml  README.md
config/: dolphinrc  kdeglobals  kglobalshortcutsrc  kwinrc.txt  mimeapps.list  pavucontrol.ini  plasma-org.kde.plasma.desktop-appletsrc  plasmashellrc  wayfire.ini  wf-shell.ini
config/alacritty/: alacritty.toml
config/btop/: btop.conf
config/nvim/: init.back  init.lua  lazy-lock.json
config/nvim/lua/config/: keymaps.lua  options.lua
config/nvim/lua/plugins/: alpha-nvim.lua  astro.lua  dapui.lua  init.lua  lua-line.lua  mason-lspconfig.lua  mason.lua  neogit.lua  null-ls.lua  nvim-cmp.lua  nvim-dap.lua  nvim-lspconfig.lua  nvim-tree.lua  nvim-treesitter.lua  pretty_print.py  session-manager.lua  telescope-ui-select.lua  telescope.lua  toggleterm.lua
config/onedrive/: config
config/service/onedrive/: run
config/service/turnstile-ready/: run
config/waybar/: config  style.css
desktop/: nnn.desktop  nvim.desktop
scripts/xdg-run-generator/: run
setup/: install
setup/includes/: bootloader  chroot_setup  common  configs  copy  desktop  display  install_system  kernel_signing  network  package_installer  service  setup  stage  utils
setup/scripts/: genfstab  plexinstall  stmz  svm
setup/sv/xdg-run-generator/: run
src/core/: mod.rs  traits.rs
src/installer/: mod.rs
src/installer/core/: errors.rs  mod.rs  model.rs  traits.rs
src/installer/ui/: commands.rs  errors.rs  mod.rs  traits.rs
src/installer/ui/tui/: mod.rs
src/installer/wifi/: errors.rs  mod.rs  traits.rs
(+1 files in other folders)
