[package]
name = "void-linux-installer"
version = "0.1.0"
edition = "2024"

[lib]
name = "void_linux_installer"
path = "src/lib.rs"

[dependencies]
rustix = "1.1.4"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tracing = "0.1.44"
ratatui = "0.29"
